# python-filesecrestore

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements.txt
filesecretstore/: __init__.py
tests/: test_secrets.py
