[tool.poetry]
name = "filesecretstore"
version = "23.03.00"
description = ""
authors = ["Darkbat91 <darkbatpgp@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
cryptography = "^39.0.2"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
mypy = "^1.1.1"
black = "^23.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
